refactor: apply sonar maintainability fixes